syntax = "proto3";
package grpc.proto.services;
option csharp_namespace = "gRPC.Proto.Services";

service Basic
{
	rpc Unary (Request) returns (Reply);
	rpc ClientStream (stream Request) returns (Reply);
	rpc ServerStream (Request) returns (stream Reply);
	rpc BidirectionalStream (stream Request) returns (stream Reply);
}

message Request
{
	enum Result {
		Success = 0;
		Failed = 1;
	}

	Result _result = 1;
	double _double = 2;
	float _float = 3;	
	int32	_int32= 4;
	int64	_int64=5;
	uint32	_uint32=6;	
	uint64	_uint64=7;
	sint32	_sint32 =8;
	sint64	_sint64=9;
	fixed32	_fixed32=10;
	fixed64	_fixed64=11;
	sfixed32 _sfixed32=12;
	sfixed64 _sfixed64=13;
	bool	_bool = 14;	
	string	_string =15;
	bytes	_bytes = 16;
}

message Reply
{
	enum Result {
		Success = 0;
		Failed = 1;
	}

	Result _result = 1;
	double _double = 2;
	float _float = 3;	
	int32	_int32= 4;
	int64	_int64=5;
	uint32	_uint32=6;	
	uint64	_uint64=7;
	sint32	_sint32 =8;
	sint64	_sint64=9;
	fixed32	_fixed32=10;
	fixed64	_fixed64=11;
	sfixed32 _sfixed32=12;
	sfixed64 _sfixed64=13;
	bool	_bool = 14;	
	string	_string =15;
	bytes	_bytes = 16;
}
